<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/add_giaodich"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_giaodich" />
    
    <Button
        android:id="@+id/display_giaodich"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/display_giaodich" />

    <Button
        android:id="@+id/delete_giaodich"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_giaodich" />

    <Button
        android:id="@+id/update_giaodich"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/update_giaodich" />

</LinearLayout>