<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/des_user"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/des_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_passRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/des_confirm_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerRes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_register" />

</LinearLayout>