<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stt" />

        <TextView
            android:id="@+id/tv_id_ngansach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tenngansach" />

        <TextView
            android:id="@+id/tv_tenngansach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_sotienBD" />

        <TextView
            android:id="@+id/tv_sotienBD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_sotienHT" />

        <TextView
            android:id="@+id/tv_sotienHT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

</TableLayout>