<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_ngansach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#681000"
        android:textSize="20sp" />

    <TableRow>

        <TextView
            android:id="@+id/tv_id_giaodich"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_id_thuchi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date" />

        <TextView
            android:id="@+id/tv_giaodich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tengiaodich" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/tv_soluong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_soluong" />

        <TextView
            android:id="@+id/tv_giatien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_giatien" />
    </TableRow>

</TableLayout>