<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableRow>

        <Spinner
            android:id="@+id/spn_search_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnNameSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchName" />
    </TableRow>

    <TableRow android:layout_marginTop="50dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ngaytimkiem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_defaultdate"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnNgayTK"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/btnTimeSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchTime" />
    </TableRow>

    <TableRow android:layout_marginTop="50dp" >

        <Spinner
            android:id="@+id/searchThetag"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSearchTheTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchTheTag" />
    </TableRow>

</TableLayout>